# ml

./: .gitignore  README.md  TODO.md  coco-stats.py  coco_category_summary.txt  coco_stats.html  coco_stats.md  pyproject.toml  status_cb.md
docs/: duplicate_images.json  duplicate_images_all.json
fastapi-template/: Dockerfile.dev
milestones/: m2_ensemble_merging.ipynb  m3_carbucks_data_analysis_and_effdet_loaders.ipynb  m4half_analysis_rerun.py
ml_carbucks/: __init__.py  custom.py  ensemble.py  hyper.py  workflow_shortcut.py
ml_carbucks/adapters/: BaseDetectionAdapter.py  EfficientDetAdapter.py  EnsembleModel.py  FasterRcnnAdapter.py  UltralyticsAdapter.py  __init__.py
ml_carbucks/car_damage/: center_net.py  demo2.ipynb  detr.py  efficient_det.py  faster_rcnn.py  hyper_exploration.py  v11x_predict.ipynb  v11x_train.py
ml_carbucks/car_part/: model.py
ml_carbucks/demos/: centernet_demo.ipynb  centernet_demo_advanced.ipynb  centernet_demo_v3.ipynb  effdet_demo.ipynb  effdet_eval_demo.ipynb  faster-rcnn.ipynb  rtdetr_demo.ipynb
ml_carbucks/ensemble/: EnsembleModel.py  merging.py
ml_carbucks/experimental/: predict.py  test.py
ml_carbucks/exploration/: center_net.py  efficient_det.py  faster_rcnn.py  ultralytics.py
ml_carbucks/interactive/: effdet_eval_demo.ipynb  faster-rcnn.ipynb
ml_carbucks/milestones/: m1_adapters_eval_vs_predict.ipynb  m2_ensemble_merging.ipynb  m3_carbucks_data_analysis_and_effdet_loaders.ipynb
ml_carbucks/mvps/: adapters_eval_vs_predict.ipynb
ml_carbucks/notebooks/: adapter.ipynb  adapter_efficientdet_predict.ipynb  adapter_fasterrcnn_predict.ipynb  adapter_remake.ipynb  ensemble_demo.ipynb  old_code.ipynb  simple_inference_demo.ipynb  ultralytics.ipynb
ml_carbucks/optmization/: EarlyStoppingCallback.py  TrialParamWrapper.py  ensemble_objective.py  execution.py  hyper.py  hyper_objective.py  objective.py  simple_study.py
ml_carbucks/patches/: effdet.py
ml_carbucks/utils/: DatasetsPathManager.py  DatasetsPathsManager.py  __init__.py  analysis.py  coco.py  (+22 more)
notes/: status.md
scripts/: coco-stats.py  copy_images_for_labels.py  create_crossval_dataset.py  create_cv_folds.py  find_corrupt_images.py  find_duplicate_images.py  fix_corrupt_images.py  fix_exif_orientation.py  open_studies.sh  relabel.py  split_dataset.py  train_yolo_adapter.py  yolo_to_coco.py
tests/: test_adapters.py  test_postprocessing.py  test_wbf.py
(+40 files in other folders)
