[tool.poetry]
name = "ml-carbucks"
version = "0.1.0"
description = ""
authors = [
    "Damian Trafiale <damian.trafiale@gmail.com>",
    "Ricardo Fernandes <ricardo_Fernandes21@hotmail.com>",
    "Nural Hassan <nuralh777@gmail.com>"
]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.12,<3.14"
effdet = "^0.4.1"
optuna = "^4.5.0"
optuna-dashboard = "^0.19.0"
torch = "^2.8.0"
torchvision = "^0.23.0"
ultralytics = "^8.3.213"
numpy = "^2.2.2"
pandas = "^2.3.3"
cloudpickle = "^3.1.1"
pycocotools = "^2.0.10"
imagehash = "^4.3.2"
matplotlib = "^3.10.7"
timm = "^1.0.20"
pillow = "^11.3.0"
torchmetrics = "^1.8.2"
albumentations = "^2.0.8"
pytest = "^8.4.2"
iterative-stratification = "^0.1.9"


[tool.poetry.group.dev.dependencies]
jupyter = "^1.1.1"
ipykernel = "^6.30.1"
deptry = "^0.24.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
